<resources>
    <string name="accuracy">Accuracy</string>
    <string name="action_settings">Settings</string>
    <string name="advocated_density">Advocated density</string>
    <string name="app_name">Zero</string>
    <string name="analysis_count_hint">Enter a new count</string>
    <string name="average">average</string>
    <string name="count">Count</string>
    <string name="stocks">Stocks</string>
    <string name="inventory">New inventory</string>
    <string name="new_current_inventory">New Current Inventory</string>
    <string name="category">Product category</string>
    <string name="type">Product type</string>
    <string name="choose_category">Modify</string>
    <string name="choose_type">Modify</string>
    <string name="create_issue">Create Issue</string>
    <string name="data_synced">Data synchronized</string>
    <string name="date_label">Date</string>
    <string name="email_address">Email address</string>
    <string name="emergency">Emergency</string>
    <string name="error_no_value">No value</string>
    <string name="picture">Picture</string>
    <string name="priority">Priority</string>
    <string name="get_average_button">Moyenne</string>
    <string name="global_auth_token">Global Authentication Token</string>
    <string name="instance">URL of your farm</string>
    <string name="issue_sync_service_name">Issues</string>
    <string name="latitude">Latitude</string>
    <string name="location">Location</string>
    <string name="longitude">Longitude</string>
    <string name="new_count">Count</string>
    <string name="new_issue">Issue</string>
    <string name="new_intervention">New intervention</string>
    <string name="notes">Notes</string>
    <string name="notif_invalidPasswordOrEmail">Invalid password or e-mail</string>
    <string name="notif_loginSucceeded">Login succeeded</string>
    <string name="observations">Observations</string>
    <string name="password">Password</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused</string>
    <string name="permlab_authenticateAccounts">use Ekylibre accounts</string>
    <string name="permlab_syncData">synchronize data to Ekylibre</string>
    <string name="permlab_capture">Take a picture</string>
    <string name="plant_variety_label">Plant variety</string>
    <string name="plant_name">Plant</string>
    <string name="precision_mode">Precision mode</string>
    <string name="pref_showDetails">Show details</string>
    <string name="pref_showDetails_summary">Show coordinates and crumbs count during an intervention</string>
    <string name="procedure_nature">Procedure nature</string>
    <string name="resume">Resume</string>
    <string name="running">Running…</string>
    <string name="save">Save</string>
    <string name="scan_code">Scan code</string>
    <string name="select_plant">Select plant</string>
    <string name="select_abacus">Select abacus</string>
    <string name="select_density">Sower\'s density</string>
    <string name="service_name">Ekylibre</string>
    <string name="settings">Settings</string>
    <string name="gravity">Gravity</string>
    <string name="sign_in">Sign in</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="current_stock">Stock Zone</string>
    <string name="choose_stock">Modify</string>
    <string name="sync">Synchronize</string>
    <string name="sync_all">Synchronize all</string>
    <string name="test_demo">Test demo</string>
    <string name="tracking">Intervention</string>
    <string name="tracking_sync_service_name">Tracking data</string>
    <string name="values">Values</string>
    <string name="severity">Severity</string>
    <string name="title_activity_capture">Capture</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_sorting">Counting</string>
    <string name="general_parameters">General parameters</string>
    <string name="network">Network</string>
    <string name="pref_mobileNetwork">Mobile network</string>
    <string name="pref_mobileNetwork_summary">Allow application to use mobile network connection</string>
    <string name="calendar">Calendar</string>
    <string name="todoList">Todo list</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="accountManager">Account manager</string>
    <string name="add_account">Add account</string>
    <string name="parameters">Parameters</string>
    <string name="GPSissue">There is a problem with your GPS</string>
    <string name="chose_plant">Chose a plant</string>
    <string name="chose_abacus">Chose an abacus</string>
    <string name="chose_density">Chose a density</string>
    <string name="after_semis">Seeding</string>
    <string name="germination">Germination</string>
    <string name="average_obtained">Average obtained :</string>
    <string name="expected_value">Expected value :</string>
    <string name="thousand_per_hectare">Thousand per hectare</string>
    <string name="million_per_hectare">Million per hectare</string>
    <string name="unity_per_hectare">Unity per hectare</string>
    <string name="unity_per_square_meter">Unity per square meter</string>
    <string name="pref_autoSync">Automatic synchronization</string>
    <string name="pref_autoSync_summary">BETA | Allow application to automatically synchronize your data</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_map">Open map</string>
    <string name="pref_syncCalendar">Synchronize local calendar</string>
    <string name="pref_syncCalendar_summary">Allow application to automatically synchronize your phone calendar</string>
    <string name="pref_GPS">Enable GPS</string>
    <string name="pref_GPS_summary">Let Zero use your location information</string>
    <string name="no_event">There is no request intervention</string>
    <string name="plant_counting_saved">Plant Counting saved</string>
    <string name="plant_counting_cannot_save">Cannot save Plant counting, please finish your counting</string>
    <string name="diff_stuff">Request compliant</string>
    <string name="send">Send</string>
    <string name="pref_poke">Reminder every 10 minutes</string>
    <string name="pref_poke_summary">Send a poke every 10 minutes that will make the phone vibrate to remind you the application is running</string>
    <string name="what_to_do">What do you want to do ?</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="abort">Abort</string>
    <string name="preparation">Preparation</string>
    <string name="travel">Travel</string>
    <string name="intervention">Intervention</string>
    <string name="pref_syncContact">Import contacts from Ekylibre</string>
    <string name="pref_syncContact_summary">Import contacts from Ekylibre to your phone automaticaly</string>
    <string name="issue_saved">Issue saved</string>
    <string name="bad_accuracy_message">Bad GPS accuracy</string>
    <string name="good_accuracy_message">GPS accuracy is good</string>
    <string name="gps_disabled">GPS is not activated</string>
    <string name="gps_tracking_disabled">GPS tracking disabled</string>
    <string name="title_activity_ui_list_zones">ui_list_zones</string>
</resources>