<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/basic_blue"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:src="@mipmap/ic_home" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="201dp"
      android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/accountInstance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instance"
            android:inputType="textUri"
            android:background="@drawable/editbargrey"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/accountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:background="@drawable/editbargrey"
            android:paddingLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

        <EditText
            android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:background="@drawable/editbargrey"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
			android:gravity="bottom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
    <Button 
        android:id="@+id/TestDemo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_demo"
        android:onClick="testDemo"
        android:visibility="gone" />
    <Button
        android:id="@+id/signIn"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="signIn"
        android:textStyle="bold"
        android:background="@drawable/buttonbar"
        android:layout_gravity="center_horizontal"/>
  </LinearLayout>

</LinearLayout>

