<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/rootViewPlantCounting">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_plant"
            android:id="@+id/plantName"
            android:onClick="chosePlant"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignEnd="@+id/Abaque" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_abacus"
            android:id="@+id/Abaque"
            android:onClick="choseAbaque"
            android:padding="10dp"
            android:layout_below="@+id/plantName"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/advocated_density"
            android:id="@+id/densityValue"
            android:padding="10dp"
            android:layout_below="@+id/Abaque"
            android:onClick="choseDensity"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_semi_germination"
            android:checked="false"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/densityValue"
            android:layout_marginTop="40dp"
            android:focusable="true"
            android:clickable="true"
            android:onClick="switchCountingContext"
            android:thumb="@drawable/custom_switch_inner_holo_light"
            android:track="@drawable/custom_switch_track_holo_light"
            android:textOn="@string/after_semis"
            android:textOff="@string/germination"/>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/Valueslayout"
            android:orientation="vertical"
            android:layout_below="@+id/switch_semi_germination"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:layout_marginTop="50dp">

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/button7"
            android:layout_gravity="center_horizontal"
            android:onClick="addValue"
            android:layout_below="@+id/Valueslayout"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_average_button"
            android:id="@+id/buttonAverage"
            android:onClick="getAverage"
            android:layout_below="@+id/Valueslayout"
            android:layout_marginTop="40dp"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Result calculus"
            android:id="@+id/textAverage"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="29dp"
            android:layout_below="@+id/button7"
            android:textStyle="bold"
            android:textColor="#000000"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observations"
            android:id="@+id/textView4"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textAverage"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/observationEditText"
            android:layout_below="@+id/textView4" />

        <ImageView
            android:id="@+id/indicator"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:background="@color/dark_grey"
            android:layout_alignBottom="@+id/textAverage"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plants Count"
            android:id="@+id/plant_count_value"
            android:layout_above="@+id/indicator"
            android:layout_alignParentEnd="true" />





    </RelativeLayout>
</ScrollView>